--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,5 @@ src/*.o
 *.txt
 
 # Ignore the final compiled program
-# This is also re-created by the Makefile
-version_forge
-
-# --- VERY IMPORTANT ---
-# Ignore the repository data created by YOUR program
-# You don't want Git tracking the test repo your VCS creates
-.minivcs/
+version_forge 
+vf_server
